Se agregaron más preguntas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,12 @@
         <item>¿Entre que ríos estaba ubicada mesopotamia?;*Tigris y Eufrates;Danubio y Sava;Nilo y Mar Rojo;</item>
         <item>Mesopotamia es una palabra griega que significa:;Meseta extensa;Dos estrechos;*Tierra entre dos rios;</item>
         <item>Mesopotamia es conocida como:;La Helade;*Cuna de la civilización;Grandes constructores;</item>
+        <item>¿Como se llamaron las primeras ciudades del mundo?;Constantinopla;Polis;*Uruk y Ur;</item>
+        <item>¿En que fecha surgieron las ciudades de Uruk y Ur?;*3500 a.C.;2334 a.C.;2900 a.C.;</item>
+        <item>¿Donde surgieron los primeros sistemas de escritura del mundo?;Egipto;Persia;*Mesopotamia;</item>
+        <item>¿Como se llamo el sistemas de escritura desarrollado en Mesopotamia?;Hierática;*Cuneiforme;Jeroglífica;</item>
+        <item>Los primeros reyes del mundo surgieron en:;*Mesopotamia;Persia;Egipto;</item>
+        <item>Fue un invento de los mesopotámicos:;El Calendario;*La Rueda;La Imprenta;</item>
     </array>
 
 </resources>
