Se añadieron mas preguntas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,9 @@
         <item>¿Como se llamo el sistemas de escritura desarrollado en Mesopotamia?;Hierática;*Cuneiforme;Jeroglífica;</item>
         <item>Los primeros reyes del mundo surgieron en:;*Mesopotamia;Persia;Egipto;</item>
         <item>Fue un invento de los mesopotámicos:;El Calendario;*La Rueda;La Imprenta;</item>
+        <item>¿Cuantas ciudades habian en Mesopotamia en el 2900 a.C.?;25;10;*30;</item>
+        <item>Rey que dominó Mesopotamia en el 2334 a.C.:;Ciro el Grande;*Sargón el Grande;Hammurabi;</item>
+        <item>¿Que significa la forma antigua del nombre de Sargón?;*Rey ilegitimo;Rey legitimo;Mata reyes;</item>
     </array>
 
 </resources>
